# Project3-Semantic-Duplicate-Near-Plagiarism-Detection-Engine-Group2

./: .gitignore  pyproject.toml
data/sample_corpus/: source-document01501.xml  source-document01504.xml  source-document01505.xml  source-document01506.xml  source-document01507.xml  source-document01508.xml
src/plagiarism_engine/: cli.py  lsh.py  minhash.py  preprocessing.py  simhash.py  similarity.py
src/plagiarism_engine.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_engine.py
